# quakespasm-exp

./: .gitattributes  .gitignore  CMakeLists.txt
.github/: fix-warnings.diff
.github/workflows/: auto-build.yml  build-cmake.yml  ci.yml  continuous_integration.yml
Linux/CodeBlocks/: QuakeSpasm-SDL2.cbp  QuakeSpasm.cbp
MacOSX/: .gitignore  Build_Instructions.md  build-macos.sh  setup-vcpkg.sh
MacOSX/English.lproj/: InfoPlist.strings
MacOSX/English.lproj/Launcher.nib/: designable.nib  keyedobjects.nib
MacOSX/QuakeSpasm.xcodeproj/: project.pbxproj
MacOSX/QuakeSpasmPPC.xcodeproj/: project.pbxproj
MacOSX/custom-triplets/: x64-osx-10.9.cmake
Misc/entfixes/entities/: .gitattributes  filelist.txt
Misc/entfixes/entities/fixed/: SM51_FAT@dee3.ent  dmc3m8@8411.ent
Misc/entfixes/entities/new/: ad_e1m3@bd90.ent  ad_fireplace_v2@afbb.ent  ad_shamsp4@1b25.ent  add2@a417.ent  add@26e0.ent  alk12b@90f3.ent  apsp1@6796.ent  base_debris@0836.ent  bbelief6@324b.ent  casana@7cfa.ent  castlez@1699.ent  catatonic@6c81.ent  coger@00ed.ent  contract@2647.ent  darkfst@f5ca.ent  discord2@a02e.ent  dv4@a508.ent  dv5@1b84.ent  dwroae_m3a@9ace.ent  e1m1@c49d.ent  e1m2@0caa.ent  e1m4@958e.ent  e1m5@fc76.ent  e2m1@3789.ent  e2m2@fbfe.ent  e2m3@237a.ent  e2m4@2f38.ent  e2m5@691a.ent  e2m7@10a8.ent  e3m2@e4a8.ent  e3m3@36e2.ent  ejm2@e06d.ent  eoem7@3ea8.ent  fc1m1@1ecb.ent  fc1m3@541c.ent  fc1m4@0891.ent  flesh2@5dbf.ent  fortress_1_1@d902.ent  godsjt@e96e.ent  gsh_tod@915e.ent  (+50 more)
Misc/entfixes/entities/old/: SM51_FAT@dee3.ent  ad_e1m3@bd90.ent  ad_fireplace_v2@afbb.ent  ad_shamsp4@1b25.ent  add2@a417.ent  add@26e0.ent  alk12b@90f3.ent  apsp1@6796.ent  base_debris@0836.ent  bbelief6@324b.ent  casana@7cfa.ent  castlez@1699.ent  catatonic@6c81.ent  coger@00ed.ent  contract@2647.ent  darkfst@f5ca.ent  discord2@a02e.ent  dv4@a508.ent  dv5@1b84.ent  dwroae_m3a@9ace.ent  e1m5@fc76.ent  e2m1@3789.ent  e2m4@2f38.ent  e2m5@691a.ent  e3m2@e4a8.ent  e3m3@36e2.ent  ejm2@e06d.ent  fc1m1@1ecb.ent  fc1m3@541c.ent  fc1m4@0891.ent  flesh2@5dbf.ent  fortress_1_1@d902.ent  godsjt@e96e.ent  gsh_tod@915e.ent  haunting@ffc6.ent  hellbrid@9e0e.ent  hrim_sp1@f054.ent  insides@023b.ent  jam6_necros@9a01.ent  jjj2_dfl@1cb0.ent  (+44 more)
Misc/entfixes/entities/original/: dmc3m8@8411.ent  sm100_zwiffle@c897.ent
Misc/entfixes/generator/: generator.cpp
Misc/entfixes/generator/open-vcdiff/: config.h
Misc/entfixes/generator/open-vcdiff/zlib/: adler32.c
Misc/qs_pak/entfixes/: generate.py
Misc/qs_pak/entfixes/fixed/: e1m1@c49d.ent  e1m2@0caa.ent  e1m4@958e.ent  e2m2@fbfe.ent  e2m3@237a.ent  e2m7@10a8.ent
Misc/qs_pak/entfixes/original/: blitz1000@e5bb.ent  eoem7@3ea8.ent
Misc/qs_pak/maps/: blitz1000@e5bb.ent  coe1@175a.ent  eoem7@3ea8.ent  hrim_sp1@f054.ent  sm100_zwiffle@c897.ent  sm212_naitelveni@a835.ent
Misc/qs_pak/scripts/: debug.lua  defs.lua  edicts.lua  engine.lua  expmode.lua  expmode_base.lua  expmode_debug.lua  expmode_edicts.lua  expmode_engine.lua  expmode_progs.lua  imgui.lua  input.lua  menus.lua  progs.lua  qimgui.lua  tests.lua  unittest.lua
Misc/qs_pak/scripts/aliases/: common.cfg  expmode.cfg
Quake/: Makefile  Makefile.darwin  Makefile.w32  Makefile.w64  Makefile.wat  OWMakefile.win32  bgmusic.c  bspfile.h  cl_demo.c  cl_input.c  cl_main.c  cl_parse.c  client.h  cmd.c  cmd.h  common.c  common.h  console.c  crc.c  crc.h  draw.h  entfixes.cpp  entfixes.h  expmode.cpp  fs_zip.c  gl_draw.c  gl_fog.c  gl_mesh.c  gl_model.c  gl_model.h  gl_rlight.c  gl_rmain.c  gl_rmisc.c  gl_screen.c  gl_sky.c  gl_texmgr.c  gl_texmgr.h  gl_vidsdl.c  gl_warp.c  glquake.h  (+75 more)
Quake/ImGuiColorTextEdit/: LanguageDefinitions.cpp  TextEditor.cpp  TextEditor.h
Quake/dear_bindings/: generate_bindings.py
Quake/hello_imgui/impl/: imgui_theme.cpp
Quake/imgui_lua_bindings/: .gitignore  Makefile  generate_bindings.sh  generate_imgui_bindings.pl  imgui_iterator.h  imgui_lua_bindings.cpp  parse_blocks.pl
Quake/lua/: ltable.c  luaconf.h
Windows/CodeBlocks/: QuakeSpasm-SDL2.cbp  QuakeSpasm.cbp
Windows/VisualStudio/: quakespasm-sdl2.vcproj  quakespasm.vcproj
